--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,14 @@
     "@tanstack/react-query": "^5.70.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.17",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
