--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
     "typescript": "^5.8.2"
