--- a/backend/package.json
+++ b/backend/package.json
@@ -34,11 +34,13 @@
     "moment": "^2.30.1",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
+    "pdfmake": "^0.2.18",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/pdfmake": "^0.2.11",
     "nodemon": "^3.1.9"
   }
 }
