--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.6.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
