--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
             }
         },
         {
-            "src": "backend/package.json",
+            "src": "backend/dist/index.js",
             "use": "@vercel/node",
             "config": {
                 "includeFiles": ["backend/dist/**/*.js", "backend/.env"]
