--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/concurrently": "^7.0.3",
     "@types/express": "^5.0.1",
