--- a/backend/package.json
+++ b/backend/package.json
@@ -36,12 +36,14 @@
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
     "pdfmake": "^0.2.18",
+    "sanitize-html": "^2.15.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/pdfmake": "^0.2.11",
+    "@types/sanitize-html": "^2.15.0",
     "nodemon": "^3.1.9"
   }
 }
