--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.21.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -35,6 +36,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
     "pdfmake": "^0.2.18",
     "sanitize-html": "^2.15.0",
