--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.17",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
