--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
+    "@upstash/redis": "^1.34.8",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.21.0",
     "cookie-parser": "^1.4.7",
