--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "nodemailer": "^6.10.0",
     "pdfmake": "^0.2.18",
     "sanitize-html": "^2.15.0",
+    "socket.io": "^4.8.1",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
